# siren-growth

./: README.md  pyproject.toml
notebooks/: figures.ipynb
scripts/: train_nca.py  train_pmnca.py  train_siren.py
src/dataset/: base.py  emojis.py
src/model/: nca.py  pm_nca.py  siren.py
src/nn/: backbone.py  ca.py  conditioning.py  morphogens.py  norm.py  perception.py  seeding.py  stochastic.py  update.py
src/training/: checkpoint.py  loss.py  scheduler.py
src/utils/: core.py  model_loading.py
src/visualisation/: dev.py  utils.py
