[project]
name = "assim-nca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.13.0",
    "h5py>=3.14.0",
    "jax>=0.8.0; sys_platform == 'darwin'",
    "jax[cuda12]>=0.8.0; sys_platform == 'linux'",
    "jaxlib>=0.8.0",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "open-clip-torch>=3.1.0",
    "optax>=0.2.5",
    "orbax>=0.1.9",
    "pillow>=11.3.0",
    "pip>=25.2",
    "rootutils>=1.0.7",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.1",
    "jaxwt>=0.1.1",
    "grain>=0.2.15",
    "tensorflow-datasets>=4.9.9",
    "jupyter>=1.1.1",
    "opencv-python>=4.11.0.86",
    "plotly>=6.5.2",
    "polars>=1.39.3",
]
